# itinerary-sorting-api

./: .gitignore  README.md  pyproject.toml
sorter/: main.py
sorter/api/: utils.py
sorter/api/v1/: tasks.py
sorter/api/v1/endpoints/: sort_itineriraries.py
sorter/schemas/: itinerirary_schemas.py
sorter/tests/: tests.py
sorter/tests/payloads/: 1000_itineraries_payload.json  100_itineraries_payload.json  payload_generator.py
